--- a/src/assets/stylesheets/venue.css
+++ b/src/assets/stylesheets/venue.css
@@ -14,12 +14,16 @@
 .flex-it-a{
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
+    column-gap: 100px;
     margin: 0 auto;
 }
 .card {
     /* Add shadows to create the "card" effect */
     /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s; */
+    display: flex;
+    flex-direction: column;
     padding: 30px;
     /* justify-content: space-between; */
 }
@@ -28,28 +32,23 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 } */
   
-  /* Add some padding inside the card container */
-.container {
-    padding: 1rem;
-    max-width: 100%;
-    margin-bottom: 3rem;
-}
 
-.image{
-    max-width: 100%;
+  /* Add some padding inside the card container */
+
+
+.venue_image{
+    width: 320.83px;
+    height: 300.79px;
     border: 4px solid #f2b10b;
     border-radius: 10px;
-    width: 90%;
-    height: 90%;
 }
 
-.image:hover{
+.venue_image:hover{
     border: 4px solid #2f2762;
 }
 
 .layered-card {
     position: relative;
-    width: 400px;
 }
 
 .layered-card::before {
@@ -59,8 +58,8 @@
     border-radius: 10px;
     position: absolute;
     transform: translate(-0.6rem, -0.7rem);
-    width: 90%;
-    height: 90%;
+    width: 95%;
+    height: 95%;
     z-index: -1;
 }
 
@@ -71,6 +70,11 @@
 .container {
     width: 400px;
     text-overflow: ellipsis;
+}
+.container {
+    width: 320px;
+    padding: 1rem;
+    margin-bottom: 3rem;
 }
 
 .container h4{
